--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -16,7 +16,7 @@
   <widget class="QWidget" name="centralWidget">
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
-     <widget class="Score" name="VoiceList" native="true"/>
+     <widget class="StructureView::Score" name="VoiceList" native="true"/>
     </item>
     <item>
      <layout class="QVBoxLayout" name="verticalLayout">
@@ -155,7 +155,7 @@
  <layoutdefault spacing="6" margin="11"/>
  <customwidgets>
   <customwidget>
-   <class>Score</class>
+   <class>StructureView::Score</class>
    <extends>QWidget</extends>
    <header>ListWidget/score.h</header>
    <container>1</container>
