--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -35,8 +35,11 @@
           </property>
          </spacer>
         </item>
-        <item row="0" column="1">
+        <item row="0" column="2">
          <widget class="QSpinBox" name="systemSpinBox"/>
+        </item>
+        <item row="0" column="1">
+         <widget class="SpinBox::SpinBox" name="widget" native="true"/>
         </item>
        </layout>
       </item>
@@ -158,6 +161,12 @@
    <class>StructureView::Score</class>
    <extends>QWidget</extends>
    <header>ListWidget/score.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>SpinBox::SpinBox</class>
+   <extends>QWidget</extends>
+   <header>SpinBox/spinbox.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
