--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -39,7 +39,7 @@
          <widget class="QSpinBox" name="systemSpinBox"/>
         </item>
         <item row="0" column="1">
-         <widget class="SpinBoxNamespace::SpinBox" name="widget" native="true"/>
+         <widget class="SpinBoxNamespace::SpinBox" name="properSpinBox" native="true"/>
         </item>
        </layout>
       </item>
