--- a/systemimagedialog.ui
+++ b/systemimagedialog.ui
@@ -45,20 +45,20 @@
   <widget class="QSpinBox" name="spinBox">
    <property name="geometry">
     <rect>
-     <x>510</x>
+     <x>500</x>
      <y>280</y>
-     <width>121</width>
+     <width>61</width>
      <height>27</height>
     </rect>
    </property>
   </widget>
-  <widget class="QGraphicsView" name="graphicsView">
+  <widget class="QGraphicsView" name="ramka">
    <property name="geometry">
     <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>481</width>
-     <height>311</height>
+     <x>10</x>
+     <y>10</y>
+     <width>461</width>
+     <height>291</height>
     </rect>
    </property>
   </widget>
@@ -99,6 +99,29 @@
    </property>
    <property name="text">
     <string>Resize</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>500</x>
+     <y>50</y>
+     <width>141</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Hotizontal rotate</string>
+   </property>
+  </widget>
+  <widget class="QDial" name="dial">
+   <property name="geometry">
+    <rect>
+     <x>530</x>
+     <y>60</y>
+     <width>51</width>
+     <height>64</height>
+    </rect>
    </property>
   </widget>
  </widget>
