--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -186,7 +186,7 @@
          </size>
         </property>
         <property name="text">
-         <string>...</string>
+         <string>X</string>
         </property>
         <property name="iconSize">
          <size>
